# stock_predictor

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 03232a459153_initial.py  762175173ae1_initital_2.py  c0af5086363a_initial.py
src/: main.py
src/jupyter_notebooks/: FMP.ipynb  Industries.ipynb  Main.ipynb  Screener2.ipynb  Screener3.ipynb  Sectors.ipynb  StockData.ipynb  Ticker.ipynb  Tickers.ipynb  news.ipynb  polygon.ipynb  screener.ipynb
src/stock_predictor/: global_settings.py  main.py  requests_retry.py
src/stock_predictor/fastapi_module/: database.py  dependencies.py  main.py
src/stock_predictor/fastapi_module/models/: predicted_trades_model.py  stock_data_model.py  tickers_model.py
src/stock_predictor/fastapi_module/routers/: predicted_trades_router.py  stock_data_router.py  tickers_router.py
src/stock_predictor/fmp_module/: fmp_base.py  fmp_history.py  fmp_ticker.py
src/stock_predictor/polygon/: financials.py  polygon_base.py  polygon_financials.py  polygon_history.py
src/stock_predictor/stock_module/: slack.py  stock_base.py  stock_calendar.py  stock_charts.py  stock_data.py  stock_financials.py  stock_history.py  stock_industries.py  stock_news.py  stock_openai_chat.py  stock_predictor.py  stock_recommendations.py  stock_screener.py  stock_screener2.py  stock_screener3.py  stock_sectors.py  stock_technicals.py  stock_tickers.py
src/stock_predictor/streamlit_module/: main.py
tests/test_stocks/: test_stock_calendar.py
